# nyc-yellow-taxi-data-cleaning

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_UPLOAD_GUIDE.md  LICENSE  Makefile  PROJECT_MANIFEST.json  README.md  RELEASE_CHECKLIST.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
data/processed/: README.md  sample_cleaned_pandas.parquet.audit.json  sample_cleaned_polars.parquet.audit.json
data/raw/: README.md
data/sample/: yellow_taxi_dirty_sample.csv  yellow_taxi_dirty_sample.parquet
docs/: citation.md  data_dictionary.md  limitations.md  methodology.md  reproducibility.md
notebooks/: 01_data_acquisition.ipynb  02_data_profiling.ipynb  03_pandas_pyjanitor_cleaning.ipynb  04_polars_cleaning.ipynb  05_duckdb_validation.ipynb  06_equivalence_and_benchmark.ipynb
reports/: duckdb_validation.json  full_month_results_PENDING.md  release_validation.md  sample_audit_report.md
sql/: validation_queries.sql
src/: cleaning_rules.py  download_data.py  duckdb_validation.py  generate_sample.py  pandas_pipeline.py  polars_pipeline.py
tests/: test_pipeline.py
